# docs-storage

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml  pytest.ini
.github/workflows/: on_push.yaml  test_on_push.yaml
docker/: backend_Dockerfile
env/: .env.template  .secret.env.template
env/dev/: .secret.env.template  mongo.env  public.env
env/prod/: .secret.env.template  public.env
src/backend/: README.md  __init__.py  asgi.py  constants.py  create_app.py  gunicorn_conf.py  main.py
src/backend/api/: base.py  router.py
src/backend/api/endpoints/: base.py
src/backend/core/: constants.py  events.py  logging_config.py
src/backend/core/api/: router.py
src/backend/core/api/endpoints/: base.py
src/backend/core/middlewares/: set.py
src/backend/core/settings/: __init__.py  base.py  common.py  main.py  mongo.py  storage.py
src/backend/core/settings/security/: __init__.py  cors.py  csp.py  csrf.py  file_encryption.py  hsts.py  main.py  referrer_policy.py  trusted_host.py  x_dns.py  x_frame.py  x_xss.py
src/backend/middlewares/: __init__.py  set.py
src/backend/settings/: __init__.py  app.py  base.py  common.py  main.py
src/backend/settings/security/: __init__.py  cors.py  csp.py  csrf.py  x_dns.py  x_frame.py  x_xss.py
src/backend/storage/: constants.py  db.py  encryption.py  events.py  icon.py  path_helper.py  typing_.py
src/backend/storage/controllers/: dir_meta.py  file_meta.py
src/backend/storage/dao/: mongo_file_meta.py  os_file_meta.py
src/backend/storage/dao_schemas/: file_meta.py
src/backend/storage/documents/: file_meta.py
src/backend/storage/mongo_schemas/: __init__.py  file_meta.py
src/backend/tests/: conftest.py
src/backend/tests/api/: test_base.py
src/backend/tests/core/api/: test_base.py
src/backend/tests/storage/: test_icon.py  test_path_helper.py
src/backend/tests/storage/controllers/: test_dir_meta.py  test_file_meta.py
src/docker/: backend_Dockerfile
