[tool.poetry]
name = "docs storage"
version = "0.2.0"
description = ""
authors = ["Niccolum <lastsal@mail.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Niccolum"
repository = "https://github.com/Niccolum/docs-storage"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Topic :: Home Automation",
]

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^21.2.0"
uvicorn = { version = "^0.26.0", extras = ["standart"] }
fastapi = "^0.109.0"
httpx = "^0.26.0"
starlette-csrf = "^3.0.0"
Secweb = "^1.9.1"
pydantic = "^2.5.3"
pymongo = "^4.6.1"
pycryptodomex = "^3.20.0"
Pillow = "^10.2.0"
beanie = "^1.25.0"
pydantic-settings = "^2.1.0"
motor-types = { version = "^1.0.0b4", extras = ["motor"] }


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pre-commit = "^3.6.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-custom-report = "^1.0.1"
pytest-reverse = "^1.7.0"
pytest-lazy-fixture = "^0.6.3"
pytest-nice-parametrize = "^1.0.1"
pytest-asyncio = "^0.23.3"
codespell = "^2.2.6"
bandit = "^1.7.6"
pytest-mock = "^3.12.0"
faker = "^22.5.0"
flake8-pyproject = "^1.2.3"
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# pytest

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term --reverse"
norecursedirs = ".venv mongo_data"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:beanie.*:",
    "ignore::DeprecationWarning:mongomock.*:",
    "ignore::DeprecationWarning:pydantic_core.*:",
    "ignore::pydantic.PydanticDeprecatedSince20:pydantic.*:",
]
env = ["MONGO_DATABASE=test_db"]

report_passed = "✔"
report_xpassed = "X"
report_failed = "💩"
report_xfailed = "x"
report_skipped = "?"
report_error = "🔥"

report_passed_verbose = "OH YEAH"
report_xpassed_verbose = "WHAT IN TARNATION?"
report_failed_verbose = "OH CRAP"
report_xfailed_verbose = "YEAH WHATEVER"
report_skipped_verbose = "DON'T CARE"
report_error_verbose = "YOU MEDDLING KIDS!"


# other linter settings

[tool.ruff]
ignore = [
    # Missing type annotation for `self` in method
    "ANN101",
    # ANN102 Missing type annotation for `cls` in classmethod
    "ANN102",
    # D100 Missing docstring in public module
    # D101 Missing docstring in public class
    # D102 Missing docstring in public method
    # D103 Missing docstring in public function
    # D104 Missing docstring in public package
    # D105 Missing docstring in magic method
    # D106 Missing docstring in public nested class
    # D107 Missing docstring in __init__
    "D1",
    # D211 No blank lines allowed before class docstring
    "D211",
    # D212 Multi-line docstring summary should start at the first line
    "D212",
    # G004 Logging statement uses f-string
    "G004",
    # N818 exception name should be named with an Error suffix. Remove later
    "N818",
    # R502 do not implicitly return None in function able to return non-None value.
    "RET502",
    # R503 missing explicit return at the end of function able to return non-None value.
    "RET503",
    # R504 unnecessary variable assignment before return statement.
    "RET504",
    # SIM117 Merge with-statements that use the same scope
    "SIM117",
    # FA102 Missing `from __future__ import annotations`, but uses PEP 585 collection
    "FA102",
    # TRY003 Avoid specifying long messages outside the exception class
    "TRY003",
    # EM101 Exception must not use a string literal, assign to variable first
    "EM101",
    # EM102 Exception must not use an f-string literal, assign to variable first
    "EM102",
]
exclude = [".venv", ".git", "__pycache__"]
line-length = 120
select = ["ALL"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]
"**/tests/**.py" = ["ANN201", "S101", "ANN401", "PT004", "PLR0913", "ARG001"]

[tool.flake8]
class_attributes_order = [
    "constant",
    "outer_field",
    "field",
    "meta_class",
    "__new__",
    "__init__",
    "__post_init__",
    "magic_method",
    "method",
    "nested_class",
]
exclude = [".venv", ".git", "__pycache__"]
select = [
    # flake8-mutable
    "M511",
    # flake8-noqa
    "NQA",
    # flake8-warnings
    "WS",
    # flake8-class-attributes-order
    "CCE",
    # flake8-functions-names
    "FNE",
    # flake8-newspaper-style
    "NEW100",
]
ignore = [
    # NQA102 "# noqa: X000" has no matching violations. False-positive with B902.
    "NQA102",
    # FNE003 Name of the function uses save, but not uses to
    "FNE003",
    # FNE008 Name of functions ends with it's first argument name
    "FNE008",
]
per-file-ignores = [
    # NQA103 "# noqa: X000" has unmatched codes, remove X000
    "**/tests/**.py:NQA103",
]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
warn_return_any = true
cache_dir = "/dev/null"
show_column_numbers = true
show_error_codes = true
pretty = true

[tool.codespell]
skip = "poetry.lock,pyproject.toml"
# add more local paths with custom dictionary separate by comma
dictionary = "-"
# all possible dictionaries
builtin = "clear,rare,informal,usage,code,names,en-GB_to_en-US"
